30.12.2010 git
- added tagname to table TBSYNCHRONIZE, on the schemas where deltasql is active,
one should run a statement:
ALTER TABLE tbsynchronize ADD tagname varchar(128) NULL;

This column records the name of the tag, in case the synchronization was up to a tag.

- adjusted test data during install procedure. Install procedure tested
  

24.12.2010 git
implemented tagging :-), including all business logic around it :-)

23.12.2010 git
- logic to upgrade schemas from production to development (HEAD) added as well
----------------
- error messages 7 and 4 removed, as they are superseeded by error 13
----------------
I think the new synchronization algorithm works already :-)                     
The next steps are:                                                             
- add logic when upgrading from production schema to development schema         
- add logic to support tags (quite simple)   
----------------
- added sourcebranch_id to table tbbranch, and making sure datamodel is consistent when
 branching
- get_and_increase_globalversion() when branching, instead of get_globalversion()
- modified structure of table tbscriptgeneration to improve its performance: instead of
 storing each script individually, we only store each segment of the path in the tree. 
- started modifying dbsync_update.inc.php to fullfill the new algorithm

- TODO: the whole test data must be regenerated, also the compatibility with the old
 branching mechanism is lost!!!

22.12.2010 git
This are changes resulting from the proposals of Harikrishnan Nair, Peter Kevin
 and Ramesh Raghavan. In particular, the document sent by Ramesh was very enlightning. 

Synchronization will be implemented as tree traversal beginning from the leaf
 in direction of the root until sourcebranch and scriptversion match. When traversing
  back, each encountered script will be added to a table tbscriptgeneration. When
 the traversing across the branches is done, the table tbscriptgeneration 