@@ -20,6 +20,7 @@ include("utils/constants.inc.php");
 <li><a href="#about">What is deltasql for?</a></li>
 <li><a href="#who">Who is behind deltasql?</a></li>
 <li><a href="#production">Is deltasql used in productive environments?</a></li>
+<li><a href="#algo">How does the synchronization algorithm work?</a></li>
 <li><a href="#license">Under which license is deltasql released?</a></li>
 <li><a href="#contribute">How can I contribute?</a></li>
 <li><a href="#install">Is it difficult to install?</a></li>
@@ -39,7 +40,8 @@ include("utils/constants.inc.php");
 <li><a href="#client">What is the purpose of the client?</a></li>
 <li><a href="#devprod">What is the difference between a production and a development schema?</a></li>
 <li><a href="#branch">How can I create a branch?</a></li>
-<li><a href="#duplicatebranch">Is it possible to create a branch of a branch?</a></li>
+<li><a href="#branchofbranch">Is it possible to create a branch of a branch?</a></li>
+<li><a href="#tag">Is it possible to tag a particular release</a></li>
 <li><a href="#continouus">Is it possible to perform continouus database integration?</a></li>
 <li><a href="#downgrade">Is it possible to downgrade a database schema to a previous schema?</a></li>
 <li><a href="#upgrade">I saw on the webpage that there is a new deltasql version, how do I upgrade?</a></li>
@@ -81,6 +83,31 @@ deltasql is a tool which is suitable for the "Agile Development" model, where de
 <p>Yes, it is used in companies in Switzerland and India. In some environments it manages more than 2000 scripts, 10 projects, 12 developers and 15 branches. From Google it
  can be seen that deltasql is popular in Brazil and Japan as well.
 </p>
+
+<h3><a name="algo"></a>How does the synchronization algorithm work?</h3>
+<p>
+In Deltasql (since version 1.3.0), it is possible to create multiple branches. Branches are made from the original line of development which is represented in Deltasql by
+ the special branch named HEAD or can be made from other branches and from branches of branches, too. Each control version system has a particular way to name the original line of development: e.g. Subversion
+  calls it 'trunk', git calls it 'master', but Deltasql calls it <b>HEAD</b> after the old but reliable Concurrent Version System (CVS).
+</p>
+<center>
+<img src="pictures/timeline.png" border="0"><br>
+<i>Picture: </i>Deltasql timeline with source and target
+</center>
+<p>Deltasql advances commit revision number (the <b>version number</b>) across all branches.
+When creating a new branch, Deltasql remembers at which version number and from which source branch branching occurs. The development tree shown in the picture above
+ is stored.</p>
+<p>
+When the user asks deltasql to generate a synchronization script for a particular database schema, the user provides the version number of the schema and its branch, and gives a target branch which should
+ be achieved by the synchronization algorithm (the source circle in the picture). By providing the target branch, the user implicitly provides the target version number as the latest version number available in Deltasql at the moment (the target circle in the picture). 
+</p>
+<p>Alternatively, the user can provide a target tag, which contains target branch and target version number.</p>
+<p>With this information, Deltasql first traverses back the tree of branches, from target (the leaf) to the source (the schema version number and its branch), recording the path in a particular
+ table called TBSCRIPTGENERATION.</p>
+<p>Deltasql then walks back along the path and for each segment of the tree, it generates a sequence of scripts which belong to that segment of the tree.</p>
+<p>The synchronization script is then the collation of the sequences of scripts and follows the path from source to target.</p>
+<p>There are <a href="manual.php#insights">more details</a> on the synchronization algorithm in the manual.</p>
+
    
 
 <h3><a name="license"></a>Under which license is deltasql released?</h3>
@@ -247,23 +274,17 @@ After launching the script generated by the Synchronization Form, the database s
     the ones explicitely marked also for the branch.
 </p>
 
-<h3><a name="duplicatebranch"></a>Is it possible to create a branch of a branch?</h3>
+<h3><a name="branchofbranch"></a>Is it possible to create a branch of a branch?</h3>
 <p>
-Yes, it is possible to do this by duplicating a branch. In the page <a href="list_branches.php">List Branches</a> you can click
-on the <b>Duplicate</b> button (if you have rights as a Project Manager or as an Administrator). The duplication
-  process will create a new branch that starts at the same point as the old branch. All scripts that are tagged
-   with the old branch will be tagged also with the new branch. From now on, when submitting a new script, it is possible
+Yes, it is possible to do this by duplicating a branch. In the <a href="list_branches.php">List Branches</a> page you can click
+on the <b>Branch</b> button (if you have rights as a Project Manager or as an Administrator). From now on, when submitting a new script, it is possible
     to decide if it belongs to the old, to the new or to both branches.
  </p>
-<p>
-To upgrade a production schema from the old branch to the new branch, you should run this query in the schema:
-</p>
-<pre>
-/* substitute NEW_BRANCH with the new branch name */
-UPDATE TBSYNCHRONIZE SET BRANCHNAME='NEW_BRANCH' WHERE versionnr= (select max(versionnr) from TBSYNCHRONIZE);
-</pre> 
-<p>After launching this update to the table TBSYNCHRONIZE the schema will follow the new branch and everything will work as expected.</p>
 
+<h3><a name="tag"></a>Is it possible to tag a particular release</h3>
+<p>
+Yes, it is. In <a href="list_branches.php">List Branches</a>, there is a <b>Tag</b> action.
+</p> 
 <h3><a name="continouus"></a>Is it possible to perform continouus database integration?</h3>
 <p>
 Under continouus integration, a developer normally understands the nightly checkout of the source code followed by
